--- a/ExViewer/Themes/GenericOverride.xaml
+++ b/ExViewer/Themes/GenericOverride.xaml
@@ -5,12 +5,6 @@
                 Value="12" />
         <Setter Property="MinHeight"
                 Value="12" />
-        <Setter Property="Background"
-                Value="Transparent" />
-        <Setter Property="Foreground"
-                Value="Transparent" />
-        <Setter Property="BorderBrush"
-                Value="Transparent" />
         <Setter Property="IsTabStop"
                 Value="False" />
         <Setter Property="Template">
@@ -18,6 +12,9 @@
                 <ControlTemplate TargetType="ScrollBar">
                     <Grid x:Name="Root">
                         <Grid.Resources>
+                            <x:Double x:Key="ScrollBarWidth">8</x:Double>
+                            <x:Double x:Key="ScrollBarMinLength">12</x:Double>
+                            <x:Double x:Key="ScrollBarRectRadius">4</x:Double>
                             <ControlTemplate x:Key="RepeatButtonTemplate"
                                              TargetType="RepeatButton">
                                 <Border x:Name="Root" />
@@ -39,115 +36,72 @@
                                    TargetType="Rectangle">
                                 <Setter Property="StrokeThickness"
                                         Value="{ThemeResource ScrollBarTrackBorderThemeThickness}" />
-                                <Setter Property="Fill"
-                                        Value="{x:Null}" />
                                 <Setter Property="Stroke"
                                         Value="{x:Null}" />
                                 <Setter Property="Margin"
                                         Value="0" />
                             </Style>
+                            <ControlTemplate x:Key="ThumbTemplate"
+                                             TargetType="Thumb">
+                                <Rectangle x:Name="ThumbVisual"
+                                           Fill="{ThemeResource SystemControlForegroundBaseLowBrush}"
+                                           RadiusX="{StaticResource ScrollBarRectRadius}"
+                                           RadiusY="{StaticResource ScrollBarRectRadius}">
+                                    <VisualStateManager.VisualStateGroups>
+                                        <VisualStateGroup x:Name="CommonStates">
+                                            <VisualState x:Name="Normal" />
+                                            <VisualState x:Name="PointerOver">
+                                                <Storyboard>
+                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ThumbVisual"
+                                                                                   Storyboard.TargetProperty="Fill">
+                                                        <DiscreteObjectKeyFrame KeyTime="0"
+                                                                                Value="{ThemeResource SystemControlHighlightBaseMediumLowBrush}" />
+                                                    </ObjectAnimationUsingKeyFrames>
+                                                </Storyboard>
+                                            </VisualState>
+                                            <VisualState x:Name="Pressed">
+                                                <Storyboard>
+                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ThumbVisual"
+                                                                                   Storyboard.TargetProperty="Fill">
+                                                        <DiscreteObjectKeyFrame KeyTime="0"
+                                                                                Value="{ThemeResource SystemControlHighlightBaseMediumBrush}" />
+                                                    </ObjectAnimationUsingKeyFrames>
+                                                </Storyboard>
+                                            </VisualState>
+                                            <VisualState x:Name="Disabled">
+                                                <Storyboard>
+                                                    <DoubleAnimation Duration="0"
+                                                                     To="0"
+                                                                     Storyboard.TargetProperty="Opacity"
+                                                                     Storyboard.TargetName="ThumbVisual" />
+                                                </Storyboard>
+                                            </VisualState>
+                                        </VisualStateGroup>
+                                    </VisualStateManager.VisualStateGroups>
+                                </Rectangle>
+                            </ControlTemplate>
                             <Style x:Key="ThumbStyle"
                                    TargetType="Thumb">
                                 <Setter Property="AutomationProperties.AccessibilityView"
                                         Value="Raw" />
+                                <Setter Property="Template"
+                                        Value="{StaticResource ThumbTemplate}" />
                             </Style>
-                            <ControlTemplate x:Key="VerticalThumbTemplate"
-                                             TargetType="Thumb">
-                                <Rectangle x:Name="ThumbVisual"
-                                           Fill="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                                           RadiusX="4"
-                                           RadiusY="4">
-                                    <VisualStateManager.VisualStateGroups>
-                                        <VisualStateGroup x:Name="CommonStates">
-                                            <VisualState x:Name="Normal" />
-                                            <VisualState x:Name="PointerOver">
-                                                <Storyboard>
-                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ThumbVisual"
-                                                                                   Storyboard.TargetProperty="Fill">
-                                                        <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                Value="{ThemeResource SystemControlHighlightBaseMediumLowBrush}" />
-                                                    </ObjectAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </VisualState>
-                                            <VisualState x:Name="Pressed">
-                                                <Storyboard>
-                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ThumbVisual"
-                                                                                   Storyboard.TargetProperty="Fill">
-                                                        <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                Value="{ThemeResource SystemControlHighlightBaseMediumBrush}" />
-                                                    </ObjectAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </VisualState>
-                                            <VisualState x:Name="Disabled">
-                                                <Storyboard>
-                                                    <DoubleAnimation Duration="0"
-                                                                     To="0"
-                                                                     Storyboard.TargetProperty="Opacity"
-                                                                     Storyboard.TargetName="ThumbVisual" />
-                                                </Storyboard>
-                                            </VisualState>
-                                        </VisualStateGroup>
-                                    </VisualStateManager.VisualStateGroups>
-                                </Rectangle>
-                            </ControlTemplate>
                             <Style x:Key="VerticalThumbStyle"
                                    TargetType="Thumb"
                                    BasedOn="{StaticResource ThumbStyle}">
-                                <Setter Property="Template"
-                                        Value="{StaticResource VerticalThumbTemplate}" />
                                 <Setter Property="Width"
-                                        Value="8" />
+                                        Value="{StaticResource ScrollBarWidth}" />
                                 <Setter Property="MinHeight"
-                                        Value="12" />
+                                        Value="{StaticResource ScrollBarMinLength}"/>
                             </Style>
-                            <ControlTemplate x:Key="HorizontalThumbTemplate"
-                                             TargetType="Thumb">
-                                <Rectangle x:Name="ThumbVisual"
-                                           Fill="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                                           RadiusX="4"
-                                           RadiusY="4">
-                                    <VisualStateManager.VisualStateGroups>
-                                        <VisualStateGroup x:Name="CommonStates">
-                                            <VisualState x:Name="Normal" />
-                                            <VisualState x:Name="PointerOver">
-                                                <Storyboard>
-                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ThumbVisual"
-                                                                                   Storyboard.TargetProperty="Fill">
-                                                        <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                Value="{ThemeResource SystemControlHighlightBaseMediumLowBrush}" />
-                                                    </ObjectAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </VisualState>
-                                            <VisualState x:Name="Pressed">
-                                                <Storyboard>
-                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ThumbVisual"
-                                                                                   Storyboard.TargetProperty="Fill">
-                                                        <DiscreteObjectKeyFrame KeyTime="0"
-                                                                                Value="{ThemeResource SystemControlHighlightBaseMediumBrush}" />
-                                                    </ObjectAnimationUsingKeyFrames>
-                                                </Storyboard>
-                                            </VisualState>
-                                            <VisualState x:Name="Disabled">
-                                                <Storyboard>
-                                                    <DoubleAnimation Duration="0"
-                                                                     To="0"
-                                                                     Storyboard.TargetProperty="Opacity"
-                                                                     Storyboard.TargetName="ThumbVisual" />
-                                                </Storyboard>
-                                            </VisualState>
-                                        </VisualStateGroup>
-                                    </VisualStateManager.VisualStateGroups>
-                                </Rectangle>
-                            </ControlTemplate>
                             <Style x:Key="HorizontalThumbStyle"
                                    TargetType="Thumb"
                                    BasedOn="{StaticResource ThumbStyle}">
-                                <Setter Property="Template"
-                                        Value="{StaticResource HorizontalThumbTemplate}" />
                                 <Setter Property="Height"
-                                        Value="8" />
+                                        Value="{StaticResource ScrollBarWidth}" />
                                 <Setter Property="MinWidth"
-                                        Value="12" />
+                                        Value="{StaticResource ScrollBarMinLength}" />
                             </Style>
                         </Grid.Resources>
                         <VisualStateManager.VisualStateGroups>
@@ -275,13 +229,13 @@
                             </Grid.ColumnDefinitions>
                             <Rectangle x:Name="HorizontalTrackRect"
                                        Grid.ColumnSpan="3"
-                                       Style="{StaticResource TrackRectStyle}"/>
+                                       Style="{StaticResource TrackRectStyle}" />
                             <RepeatButton x:Name="HorizontalLargeDecrease"
                                           Style="{StaticResource RepeatButtonStyle}"
                                           Width="0" />
                             <Thumb x:Name="HorizontalThumb"
                                    Grid.Column="1"
-                                   Style="{StaticResource HorizontalThumbStyle}"/>
+                                   Style="{StaticResource HorizontalThumbStyle}" />
                             <RepeatButton x:Name="HorizontalLargeIncrease"
                                           Grid.Column="2"
                                           Style="{StaticResource RepeatButtonStyle}" />
@@ -306,7 +260,7 @@
                             </Grid.RowDefinitions>
                             <Rectangle x:Name="VerticalTrackRect"
                                        Grid.RowSpan="3"
-                                       Style="{StaticResource TrackRectStyle}"/>
+                                       Style="{StaticResource TrackRectStyle}" />
                             <RepeatButton x:Name="VerticalLargeDecrease"
                                           Style="{StaticResource RepeatButtonStyle}"
                                           Height="0" />
