--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -1,10 +1,13 @@
 ﻿<Page x:Class="ExViewer.Views.SearchPage"
+      x:Name="root"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:ExViewer.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:pr="using:PullToRefresh.UWP"
+      xmlns:vm="using:ExViewer.ViewModels"
+      xmlns:db="using:ExViewer.DataBase"
       mc:Ignorable="d"
       xmlns:controls="using:ExViewer.Controls"
       xmlns:client="using:ExClient"
@@ -47,6 +50,27 @@
                                 TextChanged="asb_TextChanged"
                                 SuggestionChosen="asb_SuggestionChosen"
                                 QueryIcon="Find">
+                    <AutoSuggestBox.Resources>
+                        <Style x:Key="SuggestionCaptionTextBlockStyle"
+                               TargetType="TextBlock"
+                               BasedOn="{StaticResource CaptionTextBlockStyle}">
+                            <Setter Property="Foreground"
+                                    Value="{StaticResource SystemControlForegroundBaseMediumBrush}" />
+                        </Style>
+                    </AutoSuggestBox.Resources>
+                    <AutoSuggestBox.ItemTemplateSelector>
+                        <controls:DataTemplateSelector>
+                            <controls:DataTemplateKeyValuePair Key="ExViewer.DataBase.SearchHistory">
+                                <DataTemplate x:DataType="db:SearchHistory">
+                                    <StackPanel>
+                                        <TextBlock Text="{x:Bind Content}" />
+                                        <TextBlock Text="{x:Bind Time, Converter={StaticResource DateTimeToStringConverter}, ConverterParameter=Search history\, Last search on \{0\}}"
+                                                   Style="{StaticResource SuggestionCaptionTextBlockStyle}" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </controls:DataTemplateKeyValuePair>
+                        </controls:DataTemplateSelector>
+                    </AutoSuggestBox.ItemTemplateSelector>
                     <AutoSuggestBox.TextBoxStyle>
                         <Style TargetType="TextBox"
                                BasedOn="{StaticResource AutoSuggestBoxTextBoxStyle}">
