--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -37,13 +37,8 @@
         <Grid HorizontalAlignment="Center"
               VerticalAlignment="Center"
               x:Name="gd_ContentRoot">
-            <Image x:Name="img_Loading"
-                   x:DeferLoadStrategy="Lazy"
-                   Source="{ThemeResource LoadingImageSource}" 
-                   Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToVisibleConverter}}"/>
             <Image x:Name="img_Thumb"
-                   Source="{x:Bind Image.Thumb, Mode=OneWay}"
-                   Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
+                   Source="{Binding Image.Thumb, Mode=OneWay, FallbackValue={ThemeResource LoadingImageSource}}"/>
             <ContentControl x:Name="cc_Image"
                             Content="{x:Bind Image, Mode=OneWay}"
                             HorizontalAlignment="Stretch"
